Много исправленией ошибок и доработки стилей, цветов
#Новая превьюшка анимации на главном экране (исправление правой)

--- a/app/src/main/res/drawable/se_menu_main_item.xml
+++ b/app/src/main/res/drawable/se_menu_main_item.xml
@@ -4,6 +4,6 @@
     <item android:color="?attr/clAccent"
           android:state_checked="true"/>
 
-    <item android:color="?attr/clSecond"/>
+    <item android:color="?attr/clContentSecond"/>
 
 </selector>
