--- a/app/src/main/res/layout-v21/include_toolbar_rank.xml
+++ b/app/src/main/res/layout-v21/include_toolbar_rank.xml
@@ -44,10 +44,10 @@
                             android:contentDescription="@null"
                             app:boolExpression='@{nameNotEmpty}'
                             app:enabled='@{nameNotEmpty}'
-                            app:falseColor='@{R.attr.clSecond}'
+                            app:falseColor='@{R.attr.clDisable}'
                             app:srcCompat="@drawable/ic_cancel_enter"
-                            app:trueColor='@{R.attr.clIcon}'
-                            tools:tint="?attr/clIcon"/>
+                            app:trueColor='@{R.attr.clContent}'
+                            tools:tint="?attr/clDisable"/>
 
                     <EditText
                             android:id="@+id/rank_enter"
@@ -70,7 +70,7 @@
                             app:srcCompat="@drawable/ic_rank"
                             app:boolExpression='@{nameNotEmpty}'
                             app:extraExpression='@{listNotContain}'
-                            app:falseColor='@{R.attr.clSecond}'
+                            app:falseColor='@{R.attr.clDisable}'
                             app:trueColor='@{R.attr.clAccent}'
                             tools:tint="?attr/clAccent"/>
 
