--- a/app/src/main/res/layout/include_note_panel.xml
+++ b/app/src/main/res/layout/include_note_panel.xml
@@ -51,14 +51,14 @@
                         style="@style/Enter.Button"
                         android:contentDescription="@string/menu_note_restore"
                         android:onClick='@{() -> deleteClick.onMenuRestoreClick()}'
-                        android:tint="?attr/clIcon"
+                        android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_restore"/>
 
                 <ImageButton
                         style="@style/Enter.Button"
                         android:contentDescription="@string/menu_note_restore_open"
                         android:onClick='@{() -> deleteClick.onMenuRestoreOpenClick()}'
-                        android:tint="?attr/clIcon"
+                        android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_restore_open"/>
 
                 <ImageButton
@@ -83,10 +83,10 @@
                         android:onClick='@{() -> noteClick.onUndoClick()}'
                         app:boolExpression='@{undoAccess}'
                         app:enabled='@{undoAccess}'
-                        app:falseColor='@{R.attr.clSecond}'
+                        app:falseColor='@{R.attr.clDisable}'
                         app:srcCompat="@drawable/ic_undo"
-                        app:trueColor='@{R.attr.clIcon}'
-                        tools:tint="?attr/clSecond"/>
+                        app:trueColor='@{R.attr.clContent}'
+                        tools:tint="?attr/clDisable"/>
 
                 <ImageButton
                         style="@style/Enter.Button"
@@ -94,10 +94,10 @@
                         android:onClick='@{() -> noteClick.onRedoClick()}'
                         app:boolExpression='@{redoAccess}'
                         app:enabled='@{redoAccess}'
-                        app:falseColor='@{R.attr.clSecond}'
+                        app:falseColor='@{R.attr.clDisable}'
                         app:srcCompat="@drawable/ic_redo"
-                        app:trueColor='@{R.attr.clIcon}'
-                        tools:tint="?attr/clSecond"/>
+                        app:trueColor='@{R.attr.clContent}'
+                        tools:tint="?attr/clDisable"/>
 
                 <ImageButton
                         style="@style/Enter.Button"
@@ -105,16 +105,16 @@
                         android:onClick='@{() -> noteClick.onMenuRankClick()}'
                         app:boolExpression='@{!rankEmpty}'
                         app:enabled='@{!rankEmpty}'
-                        app:falseColor='@{R.attr.clSecond}'
+                        app:falseColor='@{R.attr.clDisable}'
                         app:srcCompat="@drawable/ic_rank"
-                        app:trueColor='@{rankSelect ? R.attr.clAccent : R.attr.clIcon}'
+                        app:trueColor='@{rankSelect ? R.attr.clAccent : R.attr.clContent}'
                         tools:tint="?attr/clAccent"/>
 
                 <ImageButton
                         style="@style/Enter.Button"
                         android:contentDescription="@null"
                         android:onClick='@{() -> noteClick.onMenuColorClick()}'
-                        android:tint="?attr/clIcon"
+                        android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_palette"/>
 
                 <View
@@ -124,7 +124,7 @@
 
                 <Button
                         style="@style/Enter.Button"
-                        android:background="?attr/selectableItemBackground"
+                        android:background="?attr/selectableItemBackgroundBorderless"
                         android:onClick='@{() -> noteClick.onMenuSaveClick(true, true)}'
                         android:text="@string/menu_note_save"
                         app:enabled='@{saveEnabled}'/>
@@ -144,7 +144,7 @@
                         android:onClick='@{() -> noteClick.onMenuCheckClick()}'
                         android:visibility='@{noteItem.type == def.roll ? v.VISIBLE : v.GONE}'
                         app:boolExpression='@{noteItem.allCheck}'
-                        app:falseColor='@{R.attr.clIcon}'
+                        app:falseColor='@{R.attr.clContent}'
                         app:srcCompat="@drawable/ic_check_all"
                         app:trueColor='@{R.attr.clAccent}'
                         tools:tint="?attr/clAccent"/>
@@ -155,7 +155,7 @@
                         android:onClick='@{() -> noteClick.onMenuBindClick()}'
                         android:src='@{noteItem.type == def.text ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
                         app:boolExpression='@{noteItem.status}'
-                        app:falseColor='@{R.attr.clIcon}'
+                        app:falseColor='@{R.attr.clContent}'
                         app:trueColor='@{R.attr.clAccent}'
                         tools:srcCompat="@drawable/ic_bind_roll"
                         tools:tint="?attr/clAccent"/>
@@ -164,14 +164,14 @@
                         style="@style/Enter.Button"
                         android:contentDescription='@{noteItem.type == def.text ? @string/menu_note_convert_to_roll : @string/menu_note_convert_to_text}'
                         android:onClick='@{() -> noteClick.onMenuConvertClick()}'
-                        android:tint="?attr/clIcon"
+                        android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_convert"/>
 
                 <ImageButton
                         style="@style/Enter.Button"
                         android:contentDescription="@string/menu_note_delete"
                         android:onClick='@{() -> deleteClick.onMenuDeleteClick()}'
-                        android:tint="?attr/clIcon"
+                        android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_bin"/>
 
                 <View
@@ -181,7 +181,7 @@
 
                 <Button
                         style="@style/Enter.Button"
-                        android:background="?attr/selectableItemBackground"
+                        android:background="?attr/selectableItemBackgroundBorderless"
                         android:onClick='@{() -> noteClick.onMenuEditClick(true)}'
                         android:text="@string/menu_note_edit"/>
 
