--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -33,8 +33,10 @@
                     android:layout_marginRight="@dimen/layout_8dp"
                     app:srcDisable="@drawable/ic_visible_enter"
                     app:srcDisableAnim="@drawable/anim_visible_exit"
+                    app:srcDisableColor="?attr/clContent"
                     app:srcSelect="@drawable/ic_visible_exit"
-                    app:srcSelectAnim="@drawable/anim_visible_enter"/>
+                    app:srcSelectAnim="@drawable/anim_visible_enter"
+                    app:srcSelectColor="?attr/clAccent"/>
 
             <LinearLayout
                     android:layout_width="0dp"
@@ -74,7 +76,7 @@
                     android:layout_marginStart="@dimen/layout_8dp"
                     android:layout_marginLeft="@dimen/layout_8dp"
                     android:contentDescription="@null"
-                    android:tint="?attr/clIcon"
+                    android:tint="?attr/clContent"
                     app:srcCompat="@drawable/ic_cancel_enter"/>
 
         </LinearLayout>
