--- a/app/src/main/res/layout/item_sort.xml
+++ b/app/src/main/res/layout/item_sort.xml
@@ -31,7 +31,7 @@
                 android:text='@{sortItem.text}'
                 app:boolExpression='@{position &lt;= sortEnd}'
                 app:trueColor='@{R.attr.clAccent}'
-                app:falseColor='@{R.attr.clSecond}'
+                app:falseColor='@{R.attr.clDisable}'
                 tools:text="@string/test_sort_text"
                 tools:textColor="?attr/clAccent"/>
 
