--- a/app/src/main/res/layout/sheet_add.xml
+++ b/app/src/main/res/layout/sheet_add.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/NavigationView"
-            app:itemTextColor="?attr/clText"
+            app:itemTextColor="?attr/clContent"
             app:menu="@menu/sheet_add"/>
 
 </FrameLayout>
