--- a/app/src/main/res/values/colors_app.xml
+++ b/app/src/main/res/values/colors_app.xml
@@ -3,34 +3,31 @@
 
     <color name="background_launcher">#1C2024</color>
 
+    <color name="accent_light">#039BE5</color>
+    <color name="accent_dark">#FB8C00</color>
 
-    <color name="accent_light">#039be5</color>
-    <color name="accent_dark">#fb8c00</color>
-
-    <color name="primary_light">#fafafa</color>
+    <color name="primary_light">#FAFAFA</color>
     <color name="primary_dark">#353535</color>
 
-
-    <color name="background_light">#eeeeee</color>
+    <color name="background_light">#EEEEEE</color>
     <color name="background_dark">#454545</color>
 
-    <color name="divider_light">#e0e0e0</color>
+    <color name="divider_light">#E0E0E0</color>
     <color name="divider_dark">#282828</color>
 
-    <color name="background_view_light">#ffffff</color>
+    <color name="background_view_light">#FFFFFF</color>
     <color name="background_view_dark">#353535</color>
 
-    <color name="background_enter_light">#ffffff</color>
+    <color name="background_enter_light">#FFFFFF</color>
     <color name="background_enter_dark">#454545</color>
 
+    <color name="content_light">#353535</color>
+    <color name="content_dark">#E0E0E0</color>
 
-    <color name="icon_light">#353535</color>
-    <color name="icon_dark">#e0e0e0</color>
+    <color name="content_second_light">#868686</color>  <!-- 767676 / 6e6e6e -->
+    <color name="content_second_dark">#C8C8C8</color>   <!-- c3c3c3 / c8c8c8 -->
 
-    <color name="text_light">#353535</color>
-    <color name="text_dark">#e0e0e0</color>
-
-    <color name="second_light">#9e9e9e</color>
-    <color name="second_dark">#9e9e9e</color>
+    <color name="disable_light">#CFCFCF</color>
+    <color name="disable_dark">#6A6A6A</color>
 
 </resources>
