--- a/app/src/main/res/values/styles_info.xml
+++ b/app/src/main/res/values/styles_info.xml
@@ -23,7 +23,7 @@
         <item name="android:gravity">center</item>
         <item name="android:padding">@dimen/layout_4dp</item>
         <item name="android:layout_marginBottom">@dimen/layout_8dp</item>
-        <item name="android:textColor">?attr/clText</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
         <item name="android:textSize">@dimen/text_18sp</item>
     </style>
 
@@ -35,7 +35,7 @@
         <item name="android:paddingTop">@dimen/layout_4dp</item>
         <item name="android:paddingRight">@dimen/icon_16dp</item>
         <item name="android:paddingBottom">@dimen/layout_4dp</item>
-        <item name="android:textColor">?attr/clSecond</item>
+        <item name="android:textAppearance">@style/Appearance.SubMain</item>
         <item name="android:textSize">@dimen/text_14sp</item>
     </style>
 
