--- a/app/src/main/res/values/styles_item_note.xml
+++ b/app/src/main/res/values/styles_item_note.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="NoteItem" />
+    <style name="NoteItem"/>
 
     <style name="NoteItem.Click">
         <item name="android:layout_width">match_parent</item>
@@ -24,7 +24,7 @@
         <item name="android:layout_width">@dimen/icon_16dp</item>
         <item name="android:layout_height">@dimen/icon_16dp</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:tint">?attr/clIcon</item>
+        <item name="android:tint">?attr/clContent</item>
     </style>
 
     <style name="NoteItem.Name">
@@ -33,8 +33,9 @@
         <item name="android:layout_marginBottom">@dimen/layout_8dp</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
-        <item name="android:textColor">?attr/clText</item>
-        <item name="android:textSize">@dimen/text_18sp</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/text_16sp</item>
     </style>
 
     <style name="NoteItem.Roll">
@@ -44,7 +45,7 @@
         <item name="android:layout_marginLeft">@dimen/layout_4dp</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
-        <item name="android:textColor">?attr/clText</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
         <item name="android:textSize">@dimen/text_16sp</item>
     </style>
 
@@ -53,7 +54,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">5</item>
-        <item name="android:textColor">?attr/clText</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
         <item name="android:textSize">@dimen/text_16sp</item>
     </style>
 
@@ -62,7 +63,7 @@
         <item name="android:layout_marginRight">@dimen/layout_4dp</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
-        <item name="android:textColor">?attr/clNoteInfoText</item>
+        <item name="android:textAppearance">@style/Appearance.SubMain</item>
         <item name="android:textSize">@dimen/text_14sp</item>
     </style>
 
@@ -71,13 +72,13 @@
         <item name="android:tint">?attr/clNoteIndicator</item>
     </style>
 
-    <style name="NoteItem.Color" />
+    <style name="NoteItem.Color"/>
 
     <style name="NoteItem.Color.Vertical">
         <item name="android:layout_width">@dimen/layout_4dp</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:layout_marginStart">@dimen/layout_4dp</item>
-        <item name="android:layout_marginLeft">@dimen/layout_4dp</item>
+        <item name="android:layout_marginStart">@dimen/layout_8dp</item>
+        <item name="android:layout_marginLeft">@dimen/layout_8dp</item>
         <item name="android:src">@drawable/ic_color_indicator</item>
     </style>
 
