--- a/app/src/main/res/values/styles_view_about.xml
+++ b/app/src/main/res/values/styles_view_about.xml
@@ -11,13 +11,13 @@
 
     <style name="ViewAbout.Title">
         <item name="android:gravity">center</item>
-        <item name="android:textColor">?attr/clText</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
         <item name="android:textSize">@dimen/text_18sp</item>
     </style>
 
     <style name="ViewAbout.Subtitle">
         <item name="android:gravity">center</item>
-        <item name="android:textColor">?attr/clSecond</item>
+        <item name="android:textAppearance">@style/Appearance.SubMain</item>
         <item name="android:textSize">@dimen/text_14sp</item>
     </style>
 
