--- a/iconanim/src/main/res/animator/check_group_exit.xml
+++ b/iconanim/src/main/res/animator/check_group_exit.xml
@@ -2,7 +2,8 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <objectAnimator
-            android:duration="@android:integer/config_shortAnimTime"
+            android:duration="200"
+            android:startOffset="100"
             android:interpolator="@android:anim/accelerate_decelerate_interpolator"
             android:propertyName="rotation"
             android:valueFrom="45"
