--- a/iconanim/src/main/res/animator/check_path_enter.xml
+++ b/iconanim/src/main/res/animator/check_path_enter.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <objectAnimator
-            android:duration="@android:integer/config_shortAnimTime"
+            android:duration="200"
             android:interpolator="@android:anim/accelerate_decelerate_interpolator"
             android:propertyName="pathData"
             android:valueFrom="M 16.58 7.59 L 12 3 C 12 3 12 3 12 3 L 7.42 7.59 C 7.89 8.06 8.36 8.53 8.83 9 L 12 5.83 L 15.17 9 C 15.64 8.53 16.11 8.06 16.58 7.59 Z M 8.83 15 C 8.36 15.47 7.89 15.94 7.42 16.41 L 12 21 C 12 21 12 21 12 21 L 16.58 16.41 C 16.58 16.41 16.11 15.94 15.17 15 L 12 18.17 L 8.83 15 Z"
