--- a/iconanim/src/main/res/drawable/ic_check_outline_exit.xml
+++ b/iconanim/src/main/res/drawable/ic_check_outline_exit.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:width="24dp"
         android:height="24dp"
         android:viewportWidth="24.0"
@@ -12,9 +11,8 @@
            android:rotation="45">
 
         <path android:name="@string/anim_check_path"
-              android:fillColor="?attr/srcDisableColor"
               android:pathData="M 23.314 10.586 L 13.414 0.686 C 12.636 -0.092 11.364 -0.092 10.586 0.686 L 0.686 10.586 C -0.092 11.364 -0.092 12.636 0.686 13.414 L 12 2.101 L 23.314 13.414 C 24.092 12.636 24.092 11.364 23.314 10.586 Z M 0.686 10.586 C -0.092 11.364 -0.092 12.636 0.686 13.414 L 10.586 23.314 C 11.364 24.092 12.636 24.092 13.414 23.314 L 23.314 13.414 C 24.092 12.636 24.092 11.364 23.314 10.586 L 12 21.899 L 0.686 10.586 Z"
-              tools:fillColor="#FF000000"/>
+              android:fillColor="#FF000000"/>
 
     </group>
 
