--- a/iconanim/src/main/res/drawable/anim_check_outline_exit.xml
+++ b/iconanim/src/main/res/drawable/anim_check_outline_exit.xml
@@ -10,4 +10,7 @@
     <target android:name="@string/anim_check_path"
             android:animation="@animator/check_path_exit"/>
 
+    <target android:name="@string/anim_check_mask"
+            android:animation="@animator/check_mask_exit"/>
+
 </animated-vector>
