--- a/iconanim/src/main/res/drawable/ic_check_outline_exit.xml
+++ b/iconanim/src/main/res/drawable/ic_check_outline_exit.xml
@@ -14,6 +14,16 @@
               android:pathData="M 23.314 10.586 L 13.414 0.686 C 12.636 -0.092 11.364 -0.092 10.586 0.686 L 0.686 10.586 C -0.092 11.364 -0.092 12.636 0.686 13.414 L 12 2.101 L 23.314 13.414 C 24.092 12.636 24.092 11.364 23.314 10.586 Z M 0.686 10.586 C -0.092 11.364 -0.092 12.636 0.686 13.414 L 10.586 23.314 C 11.364 24.092 12.636 24.092 13.414 23.314 L 23.314 13.414 C 24.092 12.636 24.092 11.364 23.314 10.586 L 12 21.899 L 0.686 10.586 Z"
               android:fillColor="#FF000000"/>
 
+        <group android:pivotX="12"
+               android:pivotY="12"
+               android:rotation="-45">
+
+            <clip-path android:name="@string/anim_check_mask"
+                       android:pathData="M 0 0 L 24 0 L 24 24 L 0 24 L 0 0 Z M 12 12 C 12 12 12 12 12 12 C 12 12 12 12 12 12 C 12 12 12 12 12 12 C 12 12 12 12 12 12 Z"/>
+
+        </group>
+
+
     </group>
 
 </vector>
