--- a/app/src/main/res/layout-v21/item_roll_read.xml
+++ b/app/src/main/res/layout-v21/item_roll_read.xml
@@ -37,7 +37,7 @@
                         android:visibility="invisible"
                         tools:checked="true"/>
 
-                <sgtmelon.iconanim.library.SwitchButton
+                <sgtmelon.iconanim.library.SwitchButtonAnim
                         android:id="@+id/click_button"
                         style="@style/RollItem.Click"
                         android:contentDescription="@null"
