--- a/iconanim/src/main/res/drawable/ic_check_outline_enter.xml
+++ b/iconanim/src/main/res/drawable/ic_check_outline_enter.xml
@@ -13,6 +13,15 @@
               android:pathData="M 16.58 7.59 L 12 3 C 12 3 12 3 12 3 L 7.42 7.59 C 7.89 8.06 8.36 8.53 8.83 9 L 12 5.83 L 15.17 9 C 15.64 8.53 16.11 8.06 16.58 7.59 Z M 8.83 15 C 8.36 15.47 7.89 15.94 7.42 16.41 L 12 21 C 12 21 12 21 12 21 L 16.58 16.41 C 16.58 16.41 16.11 15.94 15.17 15 L 12 18.17 L 8.83 15 Z"
               android:fillColor="#FF000000"/>
 
+        <group android:pivotX="12"
+               android:pivotY="12"
+               android:rotation="45">
+
+            <clip-path android:name="@string/anim_check_mask"
+                       android:pathData="M 0 0 L 24 0 L 24 24 L 0 24 L 0 0 Z M 12 0 C 0 0 0 12 0 12 C 0 24 12 24 12 24 C 24 24 24 12 24 12 C 24 0 12 0 12 0 Z"/>
+
+        </group>
+
     </group>
 
 </vector>
